@@ -169,6 +169,10 @@
 			<code>getFieldValueWithoutException(Object, String, Class&lt;? extends Object&gt;)</code>.
 		</p>
 		<ul>
+			<li><span class="label label-info">Modified</span> The interface 
+				<code>org.eclipse.sirius.common.tools.api.interpreter.IInterpreterWithDiagnostic.IEvaluationResult</code> has been promoted as a top-level type as 
+				<code>org.eclipse.sirius.common.tools.api.interpreter.IEvaluationResult</code>.
+			</li>
 			<li><span class="label label-danger">Removed</span> In interface 
 				<code>org.eclipse.sirius.common.tools.api.interpreter.IInterpreter</code> (and all its implementations shipped with Sirius), the methods 
 				<code>addVariableStatusListener()</code> and 
